--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@
     <section id="home" class="relative h-[95vh] flex items-center justify-center text-center text-white pt-16 overflow-hidden">
       <div id="hero-slideshow" class="absolute inset-0">
         <div class="hero-slide active absolute inset-0"
-             style="background-image: url('https://images.unsplash.com/photo-1523580494863-6f3031224c94?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80'); background-color: #10B981;">
+             style="background-image: url('https://images.unsplash.com/photo-1580927752452-89d86da3fa0a?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=2070'); background-color: #10B981;">
         </div>
         <div class="hero-slide absolute inset-0"
-             style="background-image: url('https://images.unsplash.com/photo-1581090700227-4c4f50b420d1?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80'); background-color: #F97316;">
+             style="background-image: url('https://images.unsplash.com/photo-1627634771134-54790d9f08ee?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjB8fGtpZHMlMjBjb21wdXRlciUyMHN0dWR5aW5nfGVufDB8fDB8fHww&auto=format&fit=crop&q=60&w=600'); background-color: #F97316;">
         </div>
         <div class="hero-slide absolute inset-0"
              style="background-image: url('https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80'); background-color: #1F2937;">
