--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ideolix Learning Hub – Online K-12 School with Tech Integration</title>
+  <!-- Add these with your other meta tags -->
+<meta name="robots" content="index, follow">
+<meta name="googlebot" content="index, follow">
+<meta name="google" content="notranslate">
+<meta name="google" content="nopagereadaloud">
 
   <!-- Primary SEO Meta Tags -->
   <meta name="title" content="Ideolix Learning Hub – Transforming Education in the Digital Age" />
