--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
         <a href="#videos" class="text-white hover:text-gray-200 font-medium transition">Videos</a>
         <a href="#programs" class="text-white hover:text-gray-200 font-medium transition">Programs</a>
         <a href="#blog" class="text-white hover:text-gray-200 font-medium transition">Blog</a>
+        <a href="#blog" class="text-white hover:text-gray-200 font-medium transition">Assessments</a>
         <a href="#hods" class="text-white hover:text-gray-200 font-medium transition">HODs</a>
         <a href="#testimonials" class="text-white hover:text-gray-200 font-medium transition">Testimonials</a>
         <a href="#admission" class="text-white hover:text-gray-200 font-medium transition">Admission</a>
@@ -195,6 +196,7 @@
       <a href="#videos" class="block py-3 text-dark-text hover:bg-ideolix-green hover:text-white rounded-lg font-medium transition duration-200" onclick="toggleMobileMenu()">Class Videos</a>
       <a href="#programs" class="block py-3 text-dark-text hover:bg-ideolix-green hover:text-white rounded-lg font-medium transition duration-200" onclick="toggleMobileMenu()">Programs</a>
       <a href="#blog" class="block py-3 text-dark-text hover:bg-ideolix-green hover:text-white rounded-lg font-medium transition duration-200" onclick="toggleMobileMenu()">Blog</a>
+      <a href="#blog" class="block py-3 text-dark-text hover:bg-ideolix-green hover:text-white rounded-lg font-medium transition duration-200" onclick="toggleMobileMenu()">Assessments</a>
       <a href="#hods" class="block py-3 text-dark-text hover:bg-ideolix-green hover:text-white rounded-lg font-medium transition duration-200" onclick="toggleMobileMenu()">HODs</a>
       <a href="#testimonials" class="block py-3 text-dark-text hover:bg-ideolix-green hover:text-white rounded-lg font-medium transition duration-200" onclick="toggleMobileMenu()">Testimonials</a>
       <a href="#admission" class="block py-3 text-dark-text hover:bg-ideolix-green hover:text-white rounded-lg font-medium transition duration-200" onclick="toggleMobileMenu()">Admission</a>
@@ -604,6 +606,154 @@
       </div>
     </section>
 
+        <!-- Math Assessments Section -->
+    <section id="assessments" class="section-padding bg-gradient-to-br from-blue-50 to-cyan-50">
+      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <h2 class="text-4xl font-bold text-center mb-4">Math Practice Assessments</h2>
+        <p class="text-xl text-gray-600 text-center mb-12 max-w-3xl mx-auto">
+          Test your math skills with our interactive assessments. Each quiz includes 40 challenging questions with instant scoring and personalized feedback.
+        </p>
+        
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 justify-items-center">
+          <!-- Grade 1 Math -->
+          <div class="w-full max-w-sm card-hover p-6 bg-white rounded-2xl shadow-xl border border-blue-200 transition duration-500 card-3d" data-aos="fade-up">
+            <div class="text-center mb-4">
+              <div class="w-16 h-16 bg-blue-100 rounded-full flex items-center justify-center mx-auto mb-3">
+                <i class="fas fa-calculator text-3xl text-blue-600"></i>
+              </div>
+              <h3 class="text-2xl font-bold text-dark-text">Grade 1 Math</h3>
+              <p class="text-sm text-gray-500 mt-1">40 Questions • 45 Minutes</p>
+            </div>
+            <p class="text-gray-600 text-center mb-4 text-sm">
+              Basic arithmetic, patterns, and number sense for young learners
+            </p>
+            <a href="/grade1-math.html" 
+               class="block w-full px-6 py-3 bg-blue-600 text-white font-bold rounded-xl hover:bg-blue-700 transition duration-300 text-center glow-button">
+              Start Assessment
+            </a>
+          </div>
+
+          <!-- Grade 2 Math -->
+          <div class="w-full max-w-sm card-hover p-6 bg-white rounded-2xl shadow-xl border border-green-200 transition duration-500 card-3d" data-aos="fade-up" data-aos-delay="100">
+            <div class="text-center mb-4">
+              <div class="w-16 h-16 bg-green-100 rounded-full flex items-center justify-center mx-auto mb-3">
+                <i class="fas fa-plus-circle text-3xl text-green-600"></i>
+              </div>
+              <h3 class="text-2xl font-bold text-dark-text">Grade 2 Math</h3>
+              <p class="text-sm text-gray-500 mt-1">40 Questions • 45 Minutes</p>
+            </div>
+            <p class="text-gray-600 text-center mb-4 text-sm">
+              Two-digit operations, word problems, and place value
+            </p>
+            <a href="/grade2-math.html" 
+               class="block w-full px-6 py-3 bg-green-600 text-white font-bold rounded-xl hover:bg-green-700 transition duration-300 text-center glow-button">
+              Start Assessment
+            </a>
+          </div>
+
+          <!-- Grade 3 Math -->
+          <div class="w-full max-w-sm card-hover p-6 bg-white rounded-2xl shadow-xl border border-orange-200 transition duration-500 card-3d" data-aos="fade-up" data-aos-delay="200">
+            <div class="text-center mb-4">
+              <div class="w-16 h-16 bg-orange-100 rounded-full flex items-center justify-center mx-auto mb-3">
+                <i class="fas fa-times-circle text-3xl text-orange-600"></i>
+              </div>
+              <h3 class="text-2xl font-bold text-dark-text">Grade 3 Math</h3>
+              <p class="text-sm text-gray-500 mt-1">40 Questions • 45 Minutes</p>
+            </div>
+            <p class="text-gray-600 text-center mb-4 text-sm">
+              Multiplication, division, fractions, and geometry basics
+            </p>
+            <a href="/grade3-math.html" 
+               class="block w-full px-6 py-3 bg-orange-600 text-white font-bold rounded-xl hover:bg-orange-700 transition duration-300 text-center glow-button">
+              Start Assessment
+            </a>
+          </div>
+
+          <!-- Grade 4 Math -->
+          <div class="w-full max-w-sm card-hover p-6 bg-white rounded-2xl shadow-xl border border-purple-200 transition duration-500 card-3d" data-aos="fade-up">
+            <div class="text-center mb-4">
+              <div class="w-16 h-16 bg-purple-100 rounded-full flex items-center justify-center mx-auto mb-3">
+                <i class="fas fa-divide text-3xl text-purple-600"></i>
+              </div>
+              <h3 class="text-2xl font-bold text-dark-text">Grade 4 Math</h3>
+              <p class="text-sm text-gray-500 mt-1">40 Questions • 45 Minutes</p>
+            </div>
+            <p class="text-gray-600 text-center mb-4 text-sm">
+              Multi-digit operations, decimals, and advanced fractions
+            </p>
+            <a href="/grade4-math.html" 
+               class="block w-full px-6 py-3 bg-purple-600 text-white font-bold rounded-xl hover:bg-purple-700 transition duration-300 text-center glow-button">
+              Start Assessment
+            </a>
+          </div>
+
+          <!-- Grade 5 Math -->
+          <div class="w-full max-w-sm card-hover p-6 bg-white rounded-2xl shadow-xl border border-red-200 transition duration-500 card-3d" data-aos="fade-up" data-aos-delay="100">
+            <div class="text-center mb-4">
+              <div class="w-16 h-16 bg-red-100 rounded-full flex items-center justify-center mx-auto mb-3">
+                <i class="fas fa-percentage text-3xl text-red-600"></i>
+              </div>
+              <h3 class="text-2xl font-bold text-dark-text">Grade 5 Math</h3>
+              <p class="text-sm text-gray-500 mt-1">40 Questions • 45 Minutes</p>
+            </div>
+            <p class="text-gray-600 text-center mb-4 text-sm">
+              Advanced fractions, percentages, and volume calculations
+            </p>
+            <a href="/grade5-math.html" 
+               class="block w-full px-6 py-3 bg-red-600 text-white font-bold rounded-xl hover:bg-red-700 transition duration-300 text-center glow-button">
+              Start Assessment
+            </a>
+          </div>
+
+          <!-- Grade 6 Math -->
+          <div class="w-full max-w-sm card-hover p-6 bg-white rounded-2xl shadow-xl border border-indigo-200 transition duration-500 card-3d" data-aos="fade-up" data-aos-delay="200">
+            <div class="text-center mb-4">
+              <div class="w-16 h-16 bg-indigo-100 rounded-full flex items-center justify-center mx-auto mb-3">
+                <i class="fas fa-square-root-alt text-3xl text-indigo-600"></i>
+              </div>
+              <h3 class="text-2xl font-bold text-dark-text">Grade 6 Math</h3>
+              <p class="text-sm text-gray-500 mt-1">40 Questions • 45 Minutes</p>
+            </div>
+            <p class="text-gray-600 text-center mb-4 text-sm">
+              Algebra, ratios, geometry, and statistics
+            </p>
+            <a href="/grade6-math.html" 
+               class="block w-full px-6 py-3 bg-indigo-600 text-white font-bold rounded-xl hover:bg-indigo-700 transition duration-300 text-center glow-button">
+              Start Assessment
+            </a>
+          </div>
+        </div>
+
+        <div class="text-center mt-12" data-aos="fade-up">
+          <div class="bg-white rounded-2xl p-8 shadow-lg border border-gray-100 max-w-2xl mx-auto">
+            <h3 class="text-2xl font-bold text-ideolix-green mb-4">How Our Assessments Work</h3>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-6 text-center">
+              <div>
+                <div class="w-12 h-12 bg-ideolix-green rounded-full flex items-center justify-center mx-auto mb-3">
+                  <i class="fas fa-clock text-white text-xl"></i>
+                </div>
+                <h4 class="font-semibold text-dark-text">45-Minute Timer</h4>
+                <p class="text-sm text-gray-600">Real exam conditions</p>
+              </div>
+              <div>
+                <div class="w-12 h-12 bg-ideolix-orange rounded-full flex items-center justify-center mx-auto mb-3">
+                  <i class="fas fa-chart-line text-white text-xl"></i>
+                </div>
+                <h4 class="font-semibold text-dark-text">Instant Scoring</h4>
+                <p class="text-sm text-gray-600">Immediate results & analysis</p>
+              </div>
+              <div>
+                <div class="w-12 h-12 bg-ideolix-green rounded-full flex items-center justify-center mx-auto mb-3">
+                  <i class="fas fa-graduation-cap text-white text-xl"></i>
+                </div>
+                <h4 class="font-semibold text-dark-text">Personalized Feedback</h4>
+                <p class="text-sm text-gray-600">Study recommendations</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- 11. HODs Section -->
     <section id="hods" class="section-padding bg-white text-center">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
