--- a/learning.html
+++ b/learning.html
@@ -1,88 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ideolix Learning</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: system-ui, sans-serif;
-      background: linear-gradient(135deg, #f0f9f1, #fff8f0);
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 20px;
+<script>
+  function startLearning() {
+    const name = document.getElementById('studentName').value.trim();
+    if (name) {
+      // Go to dashboard with name in URL
+      window.location.href = 'dashboard.html?name=' + encodeURIComponent(name);
+    } else {
+      alert("Please enter your name!");
     }
-    .card {
-      background: rgba(255, 255, 255, 0.85);
-      backdrop-filter: blur(10px);
-      border: 1px solid rgba(255, 255, 255, 0.7);
-      border-radius: 20px;
-      padding: 30px;
-      width: 100%;
-      max-width: 400px;
-      text-align: center;
-      box-shadow: 0 8px 30px rgba(0,0,0,0.08);
-    }
-    .logo {
-      width: 100px;
-      height: auto;
-      margin-bottom: 20px;
-    }
-    h1 {
-      margin: 0 0 20px;
-      background: linear-gradient(90deg, #2E8B57, #FF8C00);
-      -webkit-background-clip: text;
-      background-clip: text;
-      color: transparent;
-      font-size: 24px;
-    }
-    input {
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0 20px;
-      border: 2px solid #2E8B57;
-      border-radius: 10px;
-      font-size: 16px;
-      box-sizing: border-box;
-    }
-    button {
-      background: linear-gradient(90deg, #2E8B57, #FF8C00);
-      color: white;
-      border: none;
-      padding: 12px 24px;
-      font-size: 16px;
-      border-radius: 10px;
-      cursor: pointer;
-      width: 100%;
-      font-weight: bold;
-    }
-    button:hover {
-      opacity: 0.9;
-    }
-  </style>
-</head>
-<body>
-  <div class="card">
-    <img src="https://raw.githubusercontent.com/ideolixlearninghub/ideolix-web/main/ideolix%20LOGO.jpg" alt="Ideolix" class="logo" />
-    <h1>Welcome to Ideolix Learning</h1>
-    <p>Enter your name to begin:</p>
-    <input type="text" id="studentName" placeholder="Your name" />
-    <button onclick="startLearning()">Continue</button>
-  </div>
-
-  <script>
-    function startLearning() {
-      const name = document.getElementById('studentName').value.trim();
-      if (name) {
-        alert(`Hello, ${name}! 🌟\n\nSoon you'll see your dashboard with grades, subjects, and practice.`);
-        // Later: we'll go to the dashboard
-      } else {
-        alert("Please enter your name!");
-      }
-    }
-  </script>
-</body>
-</html>
+  }
+</script>
